--- a/.github/workflows/build-and-push.yml
+++ b/.github/workflows/build-and-push.yml
@@ -37,8 +37,7 @@ jobs:
 
       - name: Copy ISO out of container
         run: |
-          docker cp archiso:/workspace/out .
-
+          docker exec archiso bash -lc "cp /workspace/out/*.iso /workspace"
       - name: Stop container
         if: always()
         run: docker stop archiso
