fixed realse problem for github tag

--- a/.github/workflows/build-and-push.yml
+++ b/.github/workflows/build-and-push.yml
@@ -59,6 +59,15 @@ jobs:
           sha256sum "$ISO_FILE" > "$ISO_FILE".sha256
           # generate SHA256 checksum for verification
 
+      - name: Create tag in AKSPAISO
+        run: |
+          git clone https://x-access-token:${{ secrets.ISO_PUSH_TOKEN }}@github.com/pouya3767/AKSPAISO.git iso-repo
+          cd iso-repo
+          git checkout master
+          git tag $ISO_TAG
+          git push origin $ISO_TAG
+
+
       - name: Create GitHub Release
         uses: softprops/action-gh-release@v1
         with:
