--- a/.github/workflows/build-and-push.yml
+++ b/.github/workflows/build-and-push.yml
@@ -66,8 +66,14 @@ jobs:
           git checkout master
           git tag $ISO_TAG
           git push origin $ISO_TAG
-
-
+          # Check if tag exists
+          if git rev-parse "$ISO_TAG" >/dev/null 2>&1; then
+          echo "Tag $ISO_TAG already exists, skipping creation"
+          else
+            git tag $ISO_TAG
+            git push origin $ISO_TAG
+          fi
+ 
       - name: Create GitHub Release
         uses: softprops/action-gh-release@v1
         with:
