--- a/.github/workflows/build-and-push.yml
+++ b/.github/workflows/build-and-push.yml
@@ -58,34 +58,26 @@ jobs:
           ISO_FILE=$(ls *.iso | head -n 1)
           sha256sum "$ISO_FILE" > "$ISO_FILE".sha256
         # generate SHA256 checksum for verification
-
-      - name: Create tag in AKSPAISO if it does not exist
+      - name: Create remote tag if it does not exist
         run: |
           git clone https://x-access-token:${{ secrets.ISO_PUSH_TOKEN }}@github.com/pouya3767/AKSPAISO.git iso-repo
           cd iso-repo
           git checkout master
-          # check if tag exists
-          if git ls-remote --tags origin | grep -q "refs/tags/$ISO_TAG"; then            
-            echo "Tag $ISO_TAG already exists, skipping creation"
+          if git ls-remote --tags origin | grep -q "refs/tags/$ISO_TAG"; then
+            echo "Tag $ISO_TAG already exists on remote"
           else
             git tag "$ISO_TAG"
             git push origin "$ISO_TAG"
+            echo "Tag $ISO_TAG created and pushed"
           fi
+        # fetch remote to make sure GitHub sees the tag
+          git fetch --tags
         env:
           ISO_TAG: ${{ env.ISO_TAG }}
-        # safely create a tag only if it does not already exist
 
-      - name: Create GitHub Release
-        uses: softprops/action-gh-release@v1
-        with:
-          repository: pouya3767/AKSPAISO
-          tag_name: ${{ env.ISO_TAG }}
-          name: ${{ env.ISO_TAG }}
-          body: "Automated ISO build"
-        env:
-          GITHUB_TOKEN: ${{ secrets.ISO_PUSH_TOKEN }}
-        # create a new release in AKSPAISO repo
-
+      - name: Wait a few seconds to ensure GitHub registers the tag
+        run: sleep 10
+      
       - name: Upload ISO and checksum to Release
         uses: softprops/action-gh-release@v1
         with:
