Update hyprland configuration with new settings

--- a/releng/airootfs/etc/skel/.config/hypr/hyprland.conf
+++ b/releng/airootfs/etc/skel/.config/hypr/hyprland.conf
@@ -1,9 +1,32 @@
-monitor=,preferred,auto,auto
-exec-once = kitty
-input { kb_layout = us }
-general { 
+monitor=,preferred,auto,1
+
+input {
+    kb_layout = us,ir
+    kb_options = grp:alt_shift_toggle
+    follow_mouse = 1
+}
+
+general {
     gaps_in = 5
     gaps_out = 10
     border_size = 2
     col.active_border = rgba(33ccffee)
+    col.inactive_border = rgba(595959aa)
+    layout = dwindle
 }
+
+decoration {
+    rounding = 10
+    blur {
+        enabled = true
+        size = 3
+        passes = 1
+    }
+}
+
+$mainMod = SUPER
+
+bind = $mainMod, Q, exec, kitty
+bind = $mainMod, C, killactive, 
+bind = $mainMod, M, exit, 
+bind = $mainMod, V, togglefloating,
