--- a/releng/airootfs/etc/skel/.config/hypr/hyprland.conf
+++ b/releng/airootfs/etc/skel/.config/hypr/hyprland.conf
@@ -2,7 +2,7 @@ monitor=,preferred,auto,1
 
 input {
     kb_layout = us,ir
-    kb_options = grp:alt_shift_toggle
+    kb_options = grp:win_space_toggle
     follow_mouse = 1
 }
 
