--- a/releng/airootfs/etc/systemd/system/getty@tty1.service.d/autologin.conf
+++ b/releng/airootfs/etc/systemd/system/getty@tty1.service.d/autologin.conf
@@ -1,4 +1,4 @@
 [Service]
 ExecStart=
 ExecStart=-/sbin/agetty -o '-p -f -- \\u' --noclear --autologin liveuser - $TERM
---i-am-really-stupid flag
+--i-am-really-stupid
