--- a/releng/airootfs/etc/skel/.config/hypr/hyprland.conf
+++ b/releng/airootfs/etc/skel/.config/hypr/hyprland.conf
@@ -1,9 +1,14 @@
+env = LIBVA_DRIVER_NAME,nvidia
+env = XDG_SESSION_TYPE,wayland
+env = GBM_BACKEND,nvidia-drm
+env = __GLX_VENDOR_LIBRARY_NAME,nvidia
+env = WLR_NO_HARDWARE_CURSORS,1
+
 monitor=,preferred,auto,1
 
 input {
     kb_layout = us,ir
-    kb_options = grp:win_space_toggle
-    follow_mouse = 1
+    kb_options = grp:alt_shift_toggle
 }
 
 general {
@@ -11,22 +16,15 @@ general {
     gaps_out = 10
     border_size = 2
     col.active_border = rgba(33ccffee)
-    col.inactive_border = rgba(595959aa)
     layout = dwindle
 }
 
-decoration {
-    rounding = 10
-    blur {
-        enabled = true
-        size = 3
-        passes = 1
-    }
+cursor {
+    no_hardware_cursors = true
 }
 
 $mainMod = SUPER
-
 bind = $mainMod, Q, exec, kitty
-bind = $mainMod, C, killactive, 
 bind = $mainMod, M, exit, 
-bind = $mainMod, V, togglefloating,
+
+exec-once = kitty
