Modify hyprland.conf for cursor and env settings
Updated cursor settings and environment variables in hyprland.conf.

--- a/releng/airootfs/etc/skel/.config/hypr/hyprland.conf
+++ b/releng/airootfs/etc/skel/.config/hypr/hyprland.conf
@@ -1,8 +1,13 @@
+env = WLR_DRM_DEVICES,/dev/dri/card1:/dev/dri/card0
+
 env = LIBVA_DRIVER_NAME,nvidia
 env = XDG_SESSION_TYPE,wayland
 env = GBM_BACKEND,nvidia-drm
 env = __GLX_VENDOR_LIBRARY_NAME,nvidia
-env = WLR_NO_HARDWARE_CURSORS,1
+
+cursor {
+    no_hardware_cursors = true
+}
 
 monitor=,preferred,auto,1
 
@@ -16,11 +21,6 @@ general {
     gaps_out = 10
     border_size = 2
     col.active_border = rgba(33ccffee)
-    layout = dwindle
-}
-
-cursor {
-    no_hardware_cursors = true
 }
 
 $mainMod = SUPER
