Refactor hyprland.conf for improved configuration
Removed NVIDIA specific environment variables and cursor settings.

--- a/releng/airootfs/etc/skel/.config/hypr/hyprland.conf
+++ b/releng/airootfs/etc/skel/.config/hypr/hyprland.conf
@@ -1,13 +1,7 @@
 env = WLR_DRM_DEVICES,/dev/dri/card1:/dev/dri/card0
 
-env = LIBVA_DRIVER_NAME,nvidia
-env = XDG_SESSION_TYPE,wayland
+env = WLR_NO_HARDWARE_CURSORS,1
 env = GBM_BACKEND,nvidia-drm
-env = __GLX_VENDOR_LIBRARY_NAME,nvidia
-
-cursor {
-    no_hardware_cursors = true
-}
 
 monitor=,preferred,auto,1
 
@@ -25,6 +19,7 @@ general {
 
 $mainMod = SUPER
 bind = $mainMod, Q, exec, kitty
+bind = $mainMod, C, killactive,
 bind = $mainMod, M, exit, 
 
 exec-once = kitty
