Update hyprland.conf for Intel and Nvidia settings

--- a/releng/airootfs/etc/skel/.config/hypr/hyprland.conf
+++ b/releng/airootfs/etc/skel/.config/hypr/hyprland.conf
@@ -1,5 +1,7 @@
+# انتخاب گرافیک اینتل برای نمایش (حتی اگر انویدیا داری)
 env = WLR_DRM_DEVICES,/dev/dri/card1:/dev/dri/card0
 
+# تنظیمات سازگاری انویدیا
 env = WLR_NO_HARDWARE_CURSORS,1
 env = GBM_BACKEND,nvidia-drm
 
