--- a/releng/pacman.conf
+++ b/releng/pacman.conf
@@ -30,7 +30,8 @@ Architecture = auto
 
 # Misc options
 #UseSyslog
-#Color
+Color
+ILoveCandy
 #NoProgressBar
 # We cannot check disk space from within a chroot environment
 #CheckSpace
@@ -90,8 +91,8 @@ Include = /etc/pacman.d/mirrorlist
 #[multilib-testing]
 #Include = /etc/pacman.d/mirrorlist
 
-#[multilib]
-#Include = /etc/pacman.d/mirrorlist
+[multilib]
+Include = /etc/pacman.d/mirrorlist
 
 # An example of a custom package repository.  See the pacman manpage for
 # tips on creating your own repositories.
