builded calamares and added to akspa-repo

--- a/releng/pacman.conf
+++ b/releng/pacman.conf
@@ -6,6 +6,7 @@
 #
 # GENERAL OPTIONS
 #
+
 [options]
 # The following paths are commented out with their default values listed.
 # If you wish to use different paths, uncomment and update the paths.
@@ -102,3 +103,9 @@ Include = /etc/pacman.d/mirrorlist
 [chaotic-aur]
 SigLevel = Optional TrustAll
 Server = https://cdn-mirror.chaotic.cx/$repo/$arch
+
+[akspa]
+SigLevel = Optional TrustAll
+Server = file:///root/akspa-repo/x86_64
+
+ 
