--- a/releng/pacman.conf
+++ b/releng/pacman.conf
@@ -106,6 +106,6 @@ Server = https://cdn-mirror.chaotic.cx/$repo/$arch
 
 [akspa]
 SigLevel = Optional TrustAll
-Server = https://github.com/pouya3767/AKSPArepo/tree/master/x86_64
+Server = https://raw.githubusercontent.com/pouya3767/AKSPArepo/master/x86_64
 
  
