--- a/releng/airootfs/etc/skel/.config/hypr/hyprland.conf
+++ b/releng/airootfs/etc/skel/.config/hypr/hyprland.conf
@@ -22,4 +22,4 @@ bind = $mainMod, C, killactive,
 bind = $mainMod, M, exit, 
 
 exec-once = kitty
-exec-once = calamares
+exec-once = sleep 2 && calamares
