--- a/releng/pacman.conf
+++ b/releng/pacman.conf
@@ -107,5 +107,7 @@ Server = https://cdn-mirror.chaotic.cx/$repo/$arch
 [akspa]
 SigLevel = Optional TrustAll
 Server = https://raw.githubusercontent.com/pouya3767/AKSPArepo/master/x86_64
-
+[chaotic-aur]
+SigLevel = Never
+Server = https://cdn-mirror.chaotic.cx/chaotic-aur/x86_64
  
