--- a/releng/pacman.conf
+++ b/releng/pacman.conf
@@ -110,4 +110,7 @@ Server = https://raw.githubusercontent.com/pouya3767/AKSPArepo/master/x86_64
 [chaotic-aur]
 SigLevel = Never
 Server = https://cdn-mirror.chaotic.cx/chaotic-aur/x86_64
- 
+
+[chaotic-aur]
+SigLevel = Never
+Server = https://cdn-mirror.chaotic.cx/chaotic-aur/x86_64
