--- a/releng/pacman.conf
+++ b/releng/pacman.conf
@@ -107,4 +107,6 @@ Include = /etc/pacman.d/mirrorlist
 
 [chaotic-aur]
 SigLevel = Never
-Server = https://cdn-mirror.chaotic.cx/chaotic-aur/x86_64
+Server = https://footswitch.org/chaotic-aur/x86_64
+# یا این آدرس:
+# Server = https://mirror.f4st.host/chaotic-aur/x86_64
