--- a/releng/pacman.conf
+++ b/releng/pacman.conf
@@ -220,4 +220,4 @@ Include = /etc/pacman.d/mirrorlist
 
 [chaotic-aur]
 SigLevel = Never
-Server = https://footswitch.org/chaotic-aur/x86_64
+Server = https://cdn-mirror.chaotic.cx/chaotic-aur/x86_64
