--- a/releng/pacman.conf
+++ b/releng/pacman.conf
@@ -220,4 +220,6 @@ Include = /etc/pacman.d/mirrorlist
 
 [chaotic-aur]
 SigLevel = Never
+Server = https://cdn-mirror.chaotic.cx/chaotic-aur/x86_64
+Server = https://mirror.f4st.host/chaotic-aur/x86_64
 Server = https://mirror.vinehost.net/chaotic-aur/x86_64
